# ComfyUI-Text-Translation

./: .gitignore  pyproject.toml
.github/workflows/: publish.yml
js/: text.js
nodes/: text.py
utils/: string.py
